fix: all tests fixed, elements id/type added to DTO
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>